; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_filt_wlupdate_inheritor.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_filt_wlupdate_inheritor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kqworkloop = type { i32, %struct.kqrequest }
%struct.kqrequest = type { i32 }
%struct.turnstile = type { i32 }

@TURNSTILE_INHERITOR_NULL = common dso_local global i32 0, align 4
@TURNSTILE_INHERITOR_THREAD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.kqworkloop*, %struct.turnstile*, i32)* @filt_wlupdate_inheritor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @filt_wlupdate_inheritor(%struct.kqworkloop* %0, %struct.turnstile* %1, i32 %2) #0 {
  %4 = alloca %struct.kqworkloop*, align 8
  %5 = alloca %struct.turnstile*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.kqrequest*, align 8
  store %struct.kqworkloop* %0, %struct.kqworkloop** %4, align 8
  store %struct.turnstile* %1, %struct.turnstile** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @TURNSTILE_INHERITOR_NULL, align 4
  store i32 %9, i32* %7, align 4
  %10 = load %struct.kqworkloop*, %struct.kqworkloop** %4, align 8
  %11 = getelementptr inbounds %struct.kqworkloop, %struct.kqworkloop* %10, i32 0, i32 1
  store %struct.kqrequest* %11, %struct.kqrequest** %8, align 8
  %12 = load %struct.kqworkloop*, %struct.kqworkloop** %4, align 8
  %13 = call i32 @filt_wlturnstile_interlock_is_workq(%struct.kqworkloop* %12)
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load %struct.kqworkloop*, %struct.kqworkloop** %4, align 8
  %19 = getelementptr inbounds %struct.kqworkloop, %struct.kqworkloop* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %7, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %3
  %23 = load i32, i32* @TURNSTILE_INHERITOR_THREAD, align 4
  %24 = load i32, i32* %6, align 4
  %25 = or i32 %24, %23
  store i32 %25, i32* %6, align 4
  br label %36

26:                                               ; preds = %3
  %27 = load %struct.kqrequest*, %struct.kqrequest** %8, align 8
  %28 = getelementptr inbounds %struct.kqrequest, %struct.kqrequest* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  store i32 %29, i32* %7, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %35

31:                                               ; preds = %26
  %32 = load i32, i32* @TURNSTILE_INHERITOR_THREAD, align 4
  %33 = load i32, i32* %6, align 4
  %34 = or i32 %33, %32
  store i32 %34, i32* %6, align 4
  br label %35

35:                                               ; preds = %31, %26
  br label %36

36:                                               ; preds = %35, %22
  %37 = load %struct.turnstile*, %struct.turnstile** %5, align 8
  %38 = load i32, i32* %7, align 4
  %39 = load i32, i32* %6, align 4
  %40 = call i32 @turnstile_update_inheritor(%struct.turnstile* %37, i32 %38, i32 %39)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @filt_wlturnstile_interlock_is_workq(%struct.kqworkloop*) #1

declare dso_local i32 @turnstile_update_inheritor(%struct.turnstile*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
